--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.23.0",
     "next": "^13.5.6",
     "next-auth": "^4.22.1",
+    "nextjs-progressbar": "^0.0.16",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
